[project]
name = "hostfinder"
version = "0.0.5"
description = "Find host in local subnet listening to specified port"
authors = [{ name = "Quinten Roets", email = "qdr2104@columbia.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/hostfinder"

[project.optional-dependencies]
dev = [
    "pre-commit"
]
test = [
    "pytest",
    "hypothesis"
]

[project.scripts]
hostfinder = "hostfinder:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
