[project]
name = "hostfinder"
version = "1.0.0"
description = "Find hosts listening on specified port in local network"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil >=5.9.6, <6",
]

[project.optional-dependencies]
dev = [
    "hypothesis >= 6.100.0, <7",
    "package-dev-tools >=0.5.11, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/hostfinder"

[project.scripts]
hostfinder = "hostfinder.cli:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
hostfinder = ["py.typed"]
